Changed place holders and zoom

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <div class="col-sm-12">
                                     <div class="img-box horizontal clearfix">
                                         <div class="box-thumb">
-                                            <img src="images/service/img_2.png" alt="">
+                                            <img src="images/OT.png" alt="">
                                         </div>
                                         <div class="box-content">
                                             <h4>OneTime</h4>
@@ -86,7 +86,7 @@
                                 <div class="col-sm-12">
                                     <div class="img-box horizontal clearfix">
                                         <div class="box-thumb">
-                                            <img src="images/portfolio/se/image1@2x.png" alt="">
+                                            <img src="images/Se.png" alt="">
                                         </div>
                                         <div class="box-content">
                                             <h4>Schneider Electric</h4>
@@ -103,14 +103,14 @@
                                 <div class="col-sm-12">
                                     <div class="img-box horizontal clearfix">
                                         <div class="box-thumb">
-                                            <img src="images/service/img_2.png" alt="">
+                                            <img src="images/bg.png" alt="">
                                         </div>
                                         <div class="box-content">
                                             <h4>British Gas</h4>
                                             <p>The goal of this project was to prototype a site survey app for a new exciting business unit within Centrica / British gas. It would allow engineers to pre-qualify jobs through the use of chatbots and artificial intelligence and image recognition to consider feasibility before travelling to the site to improve profitably and accuracy.</p>
                                             <p>This exciting new product (I can't discuss the details due to an NDA) is to be piloted with just a few engineers to then be rolled out all 6,000 in the future.</p>
                                             <div class="button">
-                                                <a href="se.html">Read More</a>
+                                                <a href="">Read More</a>
                                             </div>
                                         </div>
                                     </div>
@@ -119,7 +119,7 @@
                                 <div class="col-sm-12">
                                     <div class="img-box horizontal clearfix">
                                         <div class="box-thumb">
-                                            <img src="images/service/img_2.png" alt="">
+                                            <img src="images/EK.png" alt="">
                                         </div>
                                         <div class="box-content">
                                             <h4>Electrika</h4>
@@ -135,7 +135,7 @@
                                 <div class="col-sm-12">
                                     <div class="img-box horizontal clearfix">
                                         <div class="box-thumb">
-                                            <img src="images/service/img_2.png" alt="">
+                                            <img src="images/UT.png" alt="">
                                         </div>
                                         <div class="box-content">
                                             <h4>Unitrunk</h4>
@@ -143,7 +143,7 @@
                                             <p>It needed to be fast, easy to navigate and give the user the ability to download technical information, such as product datasheets.</p>
                                             <p>The site also needed to include a content management system to allow staff to update news and content but most importantly the site needed to have great usability and SEO.</p>
                                             <div class="button">
-                                                <a href="se.html">Read More</a>
+                                                <a href="">Read More</a>
                                             </div>
                                         </div>
                                     </div>
@@ -152,22 +152,27 @@
                                 <div class="col-sm-12">
                                     <div class="img-box horizontal clearfix">
                                         <div class="box-thumb">
-                                            <img src="images/service/img_2.png" alt="">
+                                            <video width="550" autoplay muted loop>
+                                                <source src="images/blucky_promo.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                              </video>
                                         </div>
                                         <div class="box-content">
-                                            <h4>B Lucky - Casino Hire</h4>
-                                            <p>As the founder of B Lucky, I needed to build a new website for lead generation that funnelled leads into my booking system/process. I focused on usability and SEO as google organic search PPC traffic was my main route to market.</p>
-                                            <div class="button">
-                                                <a href="se.html">Read More</a>
-                                            </div>
+                                            <h4>B Lucky - Casino Hire / Events</h4>
+                                            <p>I founded and ran a small events company for over five years.</p>
+                                            <p>We specialised in casino themed events for the corporate hospitality and wedding market averaging about 375 events per year.</p>
+                                            <p>This where my love for user-centred design started, from collecting feedback from customers to improve my customer service to A/B testing of user journeys and the information architecture of the website.</p>
+                                            <p>As most of my traffic came from organic search and Adwords, I know how important SEO, website analytics and goal conversion can be.</p>
+
                                         </div>
                                     </div>
                                     <hr class="sep-line">
                                 </div>  
+                               
                                 <div class="col-sm-12">
                                     <div class="img-box no-margin-bottom horizontal clearfix">
                                         <div class="box-thumb">
-                                            <img src="images/service/img_2.png" alt="">
+                                            <img src="images/FU.png" alt="">
                                         </div>
                                         <div class="box-content">
                                             <h4>Fly UX</h4>
