--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                         <div class="box-content">
                                             <h4>Schneider Electric</h4>
                                             <p>The goal of this project was to replace an outdated lotus notes enterprise estimating software, used by over 200 field service engineers with an Ipad and web app version. It needed to help the department increase upsell, improve accuracy and traceability.</p>
-                                            <p>Most importantly it needed to as frictionless as possible as engineers had in the past chosen not even bother quoting as the old system was slow, hard to use and often wrong.
+                                            <p>Most importantly it needed to as frictionless as possible as engineers had in the past chosen not to bother quoting as the old system was slow, hard to use and often wrong.
                                             </p>
                                             <div class="button">
                                                 <a href="se.html">Read More</a>
@@ -108,7 +108,7 @@
                                         <div class="box-content">
                                             <h4>British Gas</h4>
                                             <p>The goal of this project was to prototype a site survey app for a new exciting business unit within Centrica / British gas. It would allow engineers to pre-qualify jobs through the use of chatbots and artificial intelligence and image recognition to consider feasibility before travelling to the site to improve profitably and accuracy.</p>
-                                            <p>This exciting new product (I can't discuss the details due to an NDA) is to be piloted with just a few engineers to then be rolled out all 6,000 in the future.</p>
+                                            <p>This exciting new product (product details redacted due to NDA) is to be piloted with just a few engineers. If proved successful, then it would be rolled out to all 6,000.</p>
                                             <div class="button">
                                                 <a href="">Read More</a>
                                             </div>
@@ -161,7 +161,7 @@
                                             <h4>B Lucky - Casino Hire / Events</h4>
                                             <p>I founded and ran a small events company for over five years.</p>
                                             <p>We specialised in casino themed events for the corporate hospitality and wedding market averaging about 375 events per year.</p>
-                                            <p>This where my love for user-centred design started, from collecting feedback from customers to improve my customer service to A/B testing of user journeys and the information architecture of the website.</p>
+                                            <p>This is where my love for user-centred design started, from collecting feedback from customers to improving my customer service to A/B testing of user journeys and the information architecture of the website.</p>
                                             <p>As most of my traffic came from organic search and Adwords, I know how important SEO, website analytics and goal conversion can be.</p>
 
                                         </div>
