--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="page-title">
-                                    <h1 class="heading">I’m Kevin, a <b>UX Designer</b>, product manager <br>based in Manchester.</h1>
+                                    <h1 class="heading">I’m Kevin, a <b>UX Designer</b>, Product Manager <br>based in Manchester.</h1>
                                 </div>
                             </div>
                         </div>
