--- a/electrika.html
+++ b/electrika.html
@@ -15,6 +15,7 @@
         <link href="css/cubeportfolio.css" rel="stylesheet" type="text/css"/>
         <link href="css/owl.carousel.css" rel="stylesheet" type="text/css"/>
         <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
         <!-- Document Title -->      
         <title>Kevin Torrinton | UX Designer / Product Manager</title>
