--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
     <head>
-        
+        <!-- Hotjar Tracking Code for http://kevintorrington.co.uk/ -->
+        <script>
+            (function(h,o,t,j,a,r){
+                h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+                h._hjSettings={hjid:1641076,hjsv:6};
+                a=o.getElementsByTagName('head')[0];
+                r=o.createElement('script');r.async=1;
+                r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+                a.appendChild(r);
+            })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        </script>        
         <!-- Metas -->      
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -117,7 +127,7 @@
                                 <div class="copyrights">
                                     <p>&COPY; Kevin Torrington</p>
                                 </div>
-                            </div>
+                            </div><!-- 
                             <div class="col-xs-12 col-sm-6">
                                 <div class="footer-socials">
                                     <a href="#">Facebook</a>
@@ -125,7 +135,7 @@
                                     <a href="#">Linkedin</a>
                                     <a href="#">Email</a> 
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </footer>
