--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
     <head>
-        
+        <!-- Hotjar Tracking Code for http://kevintorrington.co.uk/ -->
+        <script>
+            (function(h,o,t,j,a,r){
+                h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+                h._hjSettings={hjid:1641076,hjsv:6};
+                a=o.getElementsByTagName('head')[0];
+                r=o.createElement('script');r.async=1;
+                r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+                a.appendChild(r);
+            })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        </script>
         <!-- Metas -->      
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -111,9 +121,7 @@
                                             <h4>British Gas</h4>
                                             <p>The goal of this project was to prototype a site survey app for a new exciting business unit within Centrica / British gas. It would allow engineers to pre-qualify jobs through the use of chatbots and artificial intelligence and image recognition to consider feasibility before travelling to the site to improve profitably and accuracy.</p>
                                             <p>This exciting new product (product details redacted due to NDA) is to be piloted with just a few engineers. If proved successful, then it would be rolled out to all 6,000.</p>
-                                            <div class="button">
-                                                <a href="">Read More</a>
-                                            </div>
+
                                         </div>
                                     </div>
                                     <hr class="sep-line">
@@ -127,9 +135,7 @@
                                             <h4>Electrika</h4>
                                             <p>The goal of this project was to completely redesign and reposition a niche ageing estimating tool into a more mainstream online product library that would have broad appeal by the construction industry as a whole.</p>
                                             <p>The new product needed to be mobile responsive, fast and easy to use while working on construction sites but most importantly it needed to grow product impressions by at least 80% within 12 months.</p>
-                                            <div class="button">
-                                                <a href="se.html">Read More</a>
-                                            </div>
+
                                         </div>
                                     </div>
                                     <hr class="sep-line">
@@ -144,9 +150,7 @@
                                             <p>The goal of this project was to completely replace Unitrunks outdated static website with a new product-focused site.</p>
                                             <p>It needed to be fast, easy to navigate and give the user the ability to download technical information, such as product datasheets.</p>
                                             <p>The site also needed to include a content management system to allow staff to update news and content but most importantly the site needed to have great usability and SEO.</p>
-                                            <div class="button">
-                                                <a href="">Read More</a>
-                                            </div>
+
                                         </div>
                                     </div>
                                     <hr class="sep-line">
