--- a/se.html
+++ b/se.html
@@ -79,10 +79,10 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Schneider Electric</h4>
-                                            <p>One of the world’s biggest electrical manufacturers needed to replace their outdated estimating
+                                            <p>One of the world’s largest electrical manufacturers needed to replace their outdated estimating
                                                 software.</p>
                                             <p>
-                                                The system needed to be created as both a native iPad app and a web app so engineers could work seamlessly between devices. 
+                                                I was appointed as the lead UX/UI designer and product manager for this challenging project, overseeing a team of four developers.
                                             </p>
 
                                         </div>
@@ -92,12 +92,13 @@
                                 <div class="col-sm-12">
                                     <div class="img-box horizontal clearfix makeright">
                                         <div class="box-thumb">
-                                            <img src="images/svg/role.svg" alt="">
+                                            <img src="images/Project Goal.png" alt="">
                                         </div>
                                         <div class="box-content">
-                                            <h4>My Role</h4>
-                                            <p>One of the world’s biggest electrical manufacturers needed to replace their outdated estimating
-                                                software.</p>
+                                            <h4>Project goal</h4>
+                                            <p>The goal of this project was to replace an outdated lotus notes enterprise estimating software, used by over 200 field service engineers with an Ipad and web app version. It needed to help the department increase upsell, improve accuracy and traceability.
+                                                Most importantly it needed to as frictionless as possible as engineers had in the past chosen not to bother quoting as the old system was slow, hard to use and often wrong.</p>
+
 
                                         </div>
                                     </div>
@@ -106,13 +107,19 @@
                                 <div class="col-sm-12">
                                     <div class="img-box horizontal clearfix">
                                         <div class="box-thumb">
-                                            <img src="images/portfolio/se/image2@2x.png" alt="">
+                                            <img src="images/portfolio/se/Image 3@2x.png" alt="">
                                         </div>
                                         <div class="box-content">
-                                            <h4>Understand The Problem</h4>
-                                            <p>I was asked to design and prototype a site survey app for the British Gas Estimating Division
-                                                to improve the profitably and accuracy of field engineer visits.</p>
-
+                                            <h4>Research methods</h4>
+                                            <p>Before software development started I met with stakeholders to understand business logic but more importantly I met with the engineers and admin staff that actually use the software to find out how  the current system made them feel applying the following research methods:</p>
+                                            <ul class="client-list">
+                                                <li><i class="fa fa-chevron-right fa-fw"></i></i> Detailed interviews</li>
+                                                <li><i class="fa fa-chevron-right fa-fw"></i></i> User testing</li>
+                                                <li><i class="fa fa-chevron-right fa-fw"></i></i> Personas</li>
+                                                <li><i class="fa fa-chevron-right fa-fw"></i></i> Customer journey mapping</li>
+                                                <li><i class="fa fa-chevron-right fa-fw"></i></i> Information architecture</li>
+                                                <li><i class="fa fa-chevron-right fa-fw"></i></i> Market research analysis</li>
+                                            </ul>
                                         </div>
                                     </div>
                                     <hr class="sep-line">
@@ -120,10 +127,10 @@
                                 <div class="col-sm-12">
                                     <div class="img-box horizontal clearfix makeright">
                                         <div class="box-thumb">
-                                            <img src="images/portfolio/se/Image 3@2x.png" alt="">
+                                            <img src="images/Core customer needs.png" alt="">
                                         </div>
                                         <div class="box-content">
-                                            <h4>Define The Problem</h4>
+                                            <h4>Core customer needs</h4>
                                             <p>I was asked to design and prototype a site survey app for the <br>
                                                 British Gas Estimating Division
                                                 to improve the profitably and accuracy of field engineer visits.</p>
