--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="container">
                         <div id="logo">
                             <a href="index.html">
-                                <img src="images/logo.png" alt="Logo"> 
+                                <img class="logo" src="images/logo.svg" alt="Logo"> 
                             </a>
                         </div>
                         <span id="menu-trigger"><span></span></span>
