--- a/se.html
+++ b/se.html
@@ -41,7 +41,7 @@
                     <div class="container">
                         <div id="logo">
                             <a href="index.html">
-                                <img src="images/logo.png" alt="Logo"> 
+                                <img class="logo" src="images/logo.svg" alt="Logo"> 
                             </a>
                         </div>
                         <span id="menu-trigger"><span></span></span>
@@ -80,7 +80,7 @@
                                         <div class="box-content">
                                             <h4>Schneider Electric</h4>
                                             <p>One of the world’s largest electrical manufacturers needed to replace their outdated estimating
-                                                software.</p>
+                                                software for the service and repair department.</p>
                                             <p>
                                                 I was appointed as the lead UX/UI designer and product manager for this challenging project, overseeing a team of four developers.
                                             </p>
@@ -96,8 +96,8 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Project goal</h4>
-                                            <p>The goal of this project was to replace an outdated lotus notes enterprise estimating software, used by over 200 field service engineers with an Ipad and web app version. It needed to help the department increase upsell, improve accuracy and traceability.
-                                                Most importantly it needed to as frictionless as possible as engineers had in the past chosen not to bother quoting as the old system was slow, hard to use and often wrong.</p>
+                                            <p>The goal of this project was to replace an outdated lotus notes enterprise estimating software, used by over 200 field service engineers with an Ipad and web app version. It needed to help the department increase upsell, improve accuracy and traceability.</p>
+                                               <p> Most importantly it needed to as frictionless as possible as engineers had in the past chosen not to bother quoting as the old system was slow, hard to use and often wrong.</p>
 
 
                                         </div>
@@ -131,10 +131,10 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Core customer needs</h4>
-                                            <p>I was asked to design and prototype a site survey app for the <br>
-                                                British Gas Estimating Division
-                                                to improve the profitably and accuracy of field engineer visits.</p>
-
+                                            <p>After extensive research, I was able to identify three key areas of frustration with the existing system, quote visibility for the admin team, repeating data entry and product discovery was impossible so required use of other company tools and google to find the right part codes.  </p>
+                                            <p>In addition, it was clear the biggest obstacle for the engineers was the estimating tool was the only reason they would need to carry their old and clunky laptop on-site so often they would "forget" their laptops to avoid quoting.</p>
+                                            <p>So this version would need to also be available as a native iPad app that synced back to a web app for office-bound staff.</p>
+                                            <p>Most of the users were very experienced with the service and repair process within Schneider Electric, so over the years had adopted shorthand for everything, making the system near impossible for new staff to use without extensive knowledge of acronyms and such.</p>
                                         </div>
                                     </div>
                                     <hr class="sep-line">
@@ -146,11 +146,16 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Sketch My Ideas</h4>
-                                            <p>I was asked to design and prototype a site survey app for the British Gas Estimating Division
-                                                to improve the profitably and accuracy of field engineer visits.</p>
-                                            <div class="button">
-                                                <a href="se.html">Read More</a>
-                                            </div>
+                                            <p>After the first set of research is complete, I start by printing some blank device page templates to be completed first on my own and then in collaboration with my team.</p>
+                                            <p>We watch users tests, look at research data together and use the following techniques to better define the problem.</p>
+                                            <ul class="client-list">
+                                                <li><i class="fa fa-chevron-right fa-fw"></i></i> Affinity diagrams</li>
+                                                <li><i class="fa fa-chevron-right fa-fw"></i></i> Card sorts</li>
+                                                <li><i class="fa fa-chevron-right fa-fw"></i></i> Personas</li>
+                                            </ul>
+                                            <br>
+                                            <br>
+                                            <p>We also use the <a id="inlinelink" href="https://shop.ui-patterns.com/?v=79cba1185463" target="_blank">Persuasive, Validation and UI Patterns card decks</a> from UI Shop for inspiration.</p>
                                         </div>
                                     </div>
                                     <hr class="sep-line">
@@ -162,27 +167,21 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Create & Test Prototypes</h4>
-                                            <p>One of the world’s biggest electrical manufacturers needed to replace their outdated estimating
-                                                software.</p>
-                                            <div class="button">
-                                                <a href="se.html">Read More</a>
-                                            </div>
+                                            <p>After the first stage of sketches was done, I jumped into building a medium-fidelity prototype in Adobe XD. I love using XD over other tools for speed and the live device preview feature which is especially useful for building mobile devices. </p>
+                                            <p>I often use the live device preview feature during testing. Near the end of the design process, we ran a focus group with around 30 enginers each with their iPad, plugged into my iMac and Adobe XD meaning I could either control their screen or allow them to go at their own pace and raise any issues as they were found.</p>
+                                            <p>Although the group approach yielded interesting insights, most of my testing was conducted one to one and recorded as I find this gets the best results.</p>
+                                            <p>The feedback we gather from the user tests of the prototypes was invaluable in building a great product.</p>
                                         </div>
                                     </div>
                                     <hr class="sep-line">
                                 </div>  
                                 <div class="col-sm-12">
-                                    <div class="img-box no-margin-bottom horizontal clearfix">
-                                        <div class="box-thumb">
-                                            <img src="images/service/img_2.png" alt="">
-                                        </div>
+                                    <div class="no-margin-bottom horizontal clearfix">
                                         <div class="box-content">
-                                            <h4>What I Learnt</h4>
-                                            <p>I was asked to design and prototype a site survey app for the British Gas Estimating Division
-                                                to improve the profitably and accuracy of field engineer visits.</p>
-                                            <!-- <div class="button">
-                                                <a href="#">Read More</a>
-                                            </div> -->
+                                            <h4>Learnings</h4>
+                                            <p>Schneider Electric staff were heavily invested in the success of this new version, as upsell directly affects their KPI's and commission.</p>
+                                            <p>Their honest and candid feedback highlighted the need for better visibility of the process and the need for better product discovery.</p>
+                                            <p>The tool has been successfully deployed to Schneider Electric UK and has now been adopted by Schneider Electric Ireland with plans to roll out to the rest of the world later this year.</p>
                                         </div>
                                     </div>
                                 </div>
