Finished content for SE page.

--- a/se.html
+++ b/se.html
@@ -162,10 +162,13 @@
                                 </div>  
                                 <div class="col-sm-12">
                                     <div class="img-box horizontal clearfix makeright">
-                                        <div class="box-thumb">
-                                            <img src="images/portfolio/se/image4@2x.png" alt="">
+                                        <div class="box-thumb margin-top-60">
+                                            <video width="550" autoplay muted loop>
+                                                <source src="images/se.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                              </video>
                                         </div>
-                                        <div class="box-content">
+                                        <div class="box-content rounded">
                                             <h4>Create & Test Prototypes</h4>
                                             <p>After the first stage of sketches was done, I jumped into building a medium-fidelity prototype in Adobe XD. I love using XD over other tools for speed and the live device preview feature which is especially useful for building mobile devices. </p>
                                             <p>I often use the live device preview feature during testing. Near the end of the design process, we ran a focus group with around 30 enginers each with their iPad, plugged into my iMac and Adobe XD meaning I could either control their screen or allow them to go at their own pace and raise any issues as they were found.</p>
