made Se changes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="page-title">
-                                    <h1 class="heading">I’m Kevin, a <b>UX Designer</b>, Product Manager <br>based in Manchester.</h1>
+                                    <h1 class="heading">Kevin Torrington, a <b>UX Designer</b>, Product Manager <br>based in Manchester.</h1>
                                 </div>
                             </div>
                         </div>
@@ -89,7 +89,7 @@
                                             <p>OneTime is designed to disrupt the competition!</p>
                                             
                                             <div class="button">
-                                                <a href="onetime.html">Read More</a>
+                                                <a href="ot.html">Read More</a>
                                             </div>
                                         </div>
                                     </div>
@@ -166,7 +166,7 @@
                                         <div class="box-content">
                                             <h4>B Lucky - Casino Hire / Events</h4>
                                             <p>I founded and ran a small events company for over five years.</p>
-                                            <p>We specialised in casino themed events for the corporate hospitality and wedding market averaging about 375 events per year.</p>
+                                            <p>We specialised in casino themed events for the corporate hospitality and wedding market, averaging about 375 events per year.</p>
                                             <p>This is where my love for user-centred design started, from collecting feedback from customers to improving my customer service to A/B testing of user journeys and the information architecture of the website.</p>
                                             <p>As most of my traffic came from organic search and Adwords, I know how important SEO, website analytics and goal conversion can be.</p>
 
