--- a/se.html
+++ b/se.html
@@ -78,7 +78,7 @@
                                             <img src="images/portfolio/se/image1@2x.png" alt="">
                                         </div>
                                         <div class="box-content">
-                                            <h4>Schneider Electric</h4>
+                                            <h1>Schneider Electric</h1>
                                             <p>One of the world’s largest electrical manufacturers needed to replace their outdated estimating
                                                 software for the service and repair department.</p>
                                             <p>
@@ -111,7 +111,7 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Research methods</h4>
-                                            <p>Before software development started I met with stakeholders to understand business logic but more importantly I met with the engineers and admin staff that actually use the software to find out how  the current system made them feel applying the following research methods:</p>
+                                            <p>Before software development started I met with stakeholders to understand business logic but more importantly I met with the engineers and admin staff that actually use the software to find out how  the current system made them feel, applying the following research methods:</p>
                                             <ul class="client-list">
                                                 <li><i class="fa fa-chevron-right fa-fw"></i></i> Detailed interviews</li>
                                                 <li><i class="fa fa-chevron-right fa-fw"></i></i> User testing</li>
@@ -132,9 +132,9 @@
                                         <div class="box-content">
                                             <h4>Core customer needs</h4>
                                             <p>After extensive research, I was able to identify three key areas of frustration with the existing system, quote visibility for the admin team, repeating data entry and product discovery was impossible so required use of other company tools and google to find the right part codes.  </p>
-                                            <p>In addition, it was clear the biggest obstacle for the engineers was the estimating tool was the only reason they would need to carry their old and clunky laptop on-site so often they would "forget" their laptops to avoid quoting.</p>
-                                            <p>So this version would need to also be available as a native iPad app that synced back to a web app for office-bound staff.</p>
-                                            <p>Most of the users were very experienced with the service and repair process within Schneider Electric, so over the years had adopted shorthand for everything, making the system near impossible for new staff to use without extensive knowledge of acronyms and such.</p>
+                                            <p>The estimating software was the only reason they needed to carry their clunky old laptop on-site which meant they would often  "forget" to bring their laptops to avoid quoting.</p>
+                                            <p>So this version would also need to be available as a native iPad app that synced back to a web app for office-bound staff.</p>
+                                            <p>Most of the users were very experienced with the service and repair process within Schneider Electric, so over the years had adopted shorthand for everything, making the system nearly impossible for new staff to use without extensive knowledge of acronyms etc.</p>
                                         </div>
                                     </div>
                                     <hr class="sep-line">
@@ -146,8 +146,8 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Sketch My Ideas</h4>
-                                            <p>After the first set of research is complete, I start by printing some blank device page templates to be completed first on my own and then in collaboration with my team.</p>
-                                            <p>We watch users tests, look at research data together and use the following techniques to better define the problem.</p>
+                                            <p>After the first set of research was complete, I started by printing some blank device page templates to be completed first on my own and then in collaboration with my team.</p>
+                                            <p>We watched users tests, looked at research data together and used the following techniques to better define the problem.</p>
                                             <ul class="client-list">
                                                 <li><i class="fa fa-chevron-right fa-fw"></i></i> Affinity diagrams</li>
                                                 <li><i class="fa fa-chevron-right fa-fw"></i></i> Card sorts</li>
@@ -155,7 +155,7 @@
                                             </ul>
                                             <br>
                                             <br>
-                                            <p>We also use the <a id="inlinelink" href="https://shop.ui-patterns.com/?v=79cba1185463" target="_blank">Persuasive, Validation and UI Patterns card decks</a> from UI Shop for inspiration.</p>
+                                            <p>We also used the <a id="inlinelink" href="https://shop.ui-patterns.com/?v=79cba1185463" target="_blank">Persuasive, Validation and UI Patterns card decks</a> from UI Shop for inspiration.</p>
                                         </div>
                                     </div>
                                     <hr class="sep-line">
@@ -170,10 +170,11 @@
                                         </div>
                                         <div class="box-content rounded">
                                             <h4>Create & Test Prototypes</h4>
-                                            <p>After the first stage of sketches was done, I jumped into building a medium-fidelity prototype in Adobe XD. I love using XD over other tools for speed and the live device preview feature which is especially useful for building mobile devices. </p>
-                                            <p>I often use the live device preview feature during testing. Near the end of the design process, we ran a focus group with around 30 enginers each with their iPad, plugged into my iMac and Adobe XD meaning I could either control their screen or allow them to go at their own pace and raise any issues as they were found.</p>
+                                            <p>After the first stage of sketches were done, I jumped into building a medium-fidelity prototype in Adobe XD. I love using XD over other tools for speed and the live device preview feature which is especially useful for building mobile devices. </p>
+                                            <p>I often use the live device preview feature during testing. Near the end of the design process, we ran a focus group with around 30 enginers, each with their iPad, plugged into my iMac and Adobe XD, meaning I could either control their screen or allow them to go at their own pace and raise any issues as they were found.</p>
                                             <p>Although the group approach yielded interesting insights, most of my testing was conducted one to one and recorded as I find this gets the best results.</p>
-                                            <p>The feedback we gather from the user tests of the prototypes was invaluable in building a great product.</p>
+                                            <p>
+                                                The user test feedback from the prototypes was invaluable in building a great product.</p>
                                         </div>
                                     </div>
                                     <hr class="sep-line">
