Added OT content and fized typos

--- a/se.html
+++ b/se.html
@@ -78,7 +78,7 @@
                                             <img src="images/portfolio/se/image1@2x.png" alt="">
                                         </div>
                                         <div class="box-content">
-                                            <h1>Schneider Electric</h1>
+                                            <h4>Schneider Electric</h4>
                                             <p>One of the world’s largest electrical manufacturers needed to replace their outdated estimating
                                                 software for the service and repair department.</p>
                                             <p>
@@ -174,7 +174,7 @@
                                             <p>I often use the live device preview feature during testing. Near the end of the design process, we ran a focus group with around 30 enginers, each with their iPad, plugged into my iMac and Adobe XD, meaning I could either control their screen or allow them to go at their own pace and raise any issues as they were found.</p>
                                             <p>Although the group approach yielded interesting insights, most of my testing was conducted one to one and recorded as I find this gets the best results.</p>
                                             <p>
-                                                The user test feedback from the prototypes was invaluable in building a great product.</p>
+                                                The user test feedback from the prototypes was invaluable in building a successful product.</p>
                                         </div>
                                     </div>
                                     <hr class="sep-line">
