--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                             </div>
                        
                             <div class="col-sm-8  margin-bottom-45">
-                                <h2 class="title">About Me</h2>
+                                <h4 class="title">About Me</h4>
                                 <p class="body-text">I’ve been designing digital and offline experiences for over 10 years. </p>
                                 <p class="body-text">From my days of running a city centre photography studio, and founding an events company, to now creating software products the people love to use, I have always held to the belief that empathy is the key to success.</p>
                                 <p class="body-text">I have been fortunate to work with many leading blue-chip organizations such as Schneider Electric, Legrand and British Gas to solve some of their most challenging user experience problems.</p>
@@ -149,7 +149,7 @@
                         <div class="row">
                             <div class="col-sm-12 mar">
                                 <hr class="sep-line">
-                                <h2 class="title no-margin-bottom">Tools</h2>
+                                <h4 class="title no-margin-bottom">Tools</h4>
                             </div>
                             <div class="col-sm-12 no-padding-left no-padding-right">
                                 <div class="col-xs-6 col-sm-3">
@@ -162,7 +162,7 @@
                                 </div>
                                 <div class="col-xs-6 col-sm-3">
                                     <ul class="client-list">
-                                        <li>Porotopie</li>
+                                        <li>Figma</li>
                                         <li>Axure RP</li>
                                         <li>After Effects</li>
                                         <li>Premier Pro</li>
