--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>British Gas</h4>
-                                            <p>The goal of this project was to prototype a site survey app for a new exciting business unit within Centrica / British gas. It would allow engineers to pre-qualify jobs through the use of chatbots and artificial intelligence and image recognition to consider feasibility before travelling to the site to improve profitably and accuracy.</p>
+                                            <p>The goal of this project was to prototype a site survey app for a new exciting business unit within Centrica / British gas. It would allow engineers to pre-qualify jobs through the use of chatbots and artificial intelligence and image recognition to consider feasibility before traveling to the site to improve profitably and accuracy.</p>
                                             <p>This exciting new product (product details redacted due to NDA) is to be piloted with just a few engineers. If proved successful, then it would be rolled out to all 6,000.</p>
 
                                         </div>
