--- a/ot.html
+++ b/ot.html
@@ -78,12 +78,10 @@
                                             <img src="images/ot_top.png" alt="">
                                         </div>
                                         <div class="box-content">
-                                            <h1>OneTime</h1>
-                                            <p>CHANGE ME</p>
-                                            <p>
-                                               CHANGE ME
-                                            </p>
-
+                                            <h4>OneTime</h4>
+                                            <p>The idea for OneTime came from the realization that most electrical manufacturers were not able to provide our parent company Electrika with high-quality product data that was needed for our estimating software.</p>
+                                            <p>It was clear that companies needed a better PIM and I was tasked to design OneTime.</p>
+                                            <p>I was appointed as the lead UX/UI designer and product manager for this challenging project, overseeing a team of five developers, and two people from the data team to assist with user research.</p>
                                         </div>
                                     </div>
                                     <hr class="sep-line">
@@ -111,7 +109,8 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Research methods</h4>
-                                            <p>Before software development started I met with stakeholders to understand business logic but more importantly I met with the engineers and admin staff that actually use the software to find out how  the current system made them feel applying the following research methods:</p>
+                                            <p>I started with a large amount of competitor research on the leading brands within the PIM space, including in-depth user tests within my team and external customers.</p>
+                                            <p>I also used the following research methods:</p>
                                             <ul class="client-list">
                                                 <li><i class="fa fa-chevron-right fa-fw"></i></i> Detailed interviews</li>
                                                 <li><i class="fa fa-chevron-right fa-fw"></i></i> User testing</li>
@@ -131,10 +130,10 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Core customer needs</h4>
-                                            <p>After extensive research, I was able to identify three key areas of frustration with the existing system, quote visibility for the admin team, repeating data entry and product discovery was impossible so required use of other company tools and google to find the right part codes.  </p>
-                                            <p>In addition, it was clear the biggest obstacle for the engineers was the estimating tool was the only reason they would need to carry their old and clunky laptop on-site so often they would "forget" their laptops to avoid quoting.</p>
-                                            <p>So this version would need to also be available as a native iPad app that synced back to a web app for office-bound staff.</p>
-                                            <p>Most of the users were very experienced with the service and repair process within Schneider Electric, so over the years had adopted shorthand for everything, making the system near impossible for new staff to use without extensive knowledge of acronyms and such.</p>
+                                            <p>After extensive research, I was able to identify three key areas of frustration with the existing apps within the market. Difficult setup, not being able to make changes fast enough (e,g to many steps) and not being able to export the data in a way that their customer needs.</p>
+                                            <p>I also identified that users always seemed to fallback to spreadsheets to answer all of their data problems, so it was clear I had to include a spreadsheet type interface that would allow users to move seamlessly between Excel and OneTime.</p>
+                                            <p>Product data created by the marketing team would need to be very different from the data provided by the project management team. The data also needed to be displayed differently depending on the sales channel so an easy way to manage this was essential. </p>
+                                        
                                         </div>
                                     </div>
                                     <hr class="sep-line">
@@ -164,16 +163,16 @@
                                     <div class="img-box horizontal clearfix makeright">
                                         <div class="box-thumb margin-top-60">
                                             <video width="550" autoplay muted loop>
-                                                <source src="images/se.mp4" type="video/mp4">
+                                                <source src="images/ot-low-fidelity.mp4" type="video/mp4">
                                                 Your browser does not support the video tag.
                                               </video>
                                         </div>
                                         <div class="box-content rounded">
                                             <h4>Create & Test Prototypes</h4>
-                                            <p>After the first stage of sketches was done, I jumped into building a medium-fidelity prototype in Adobe XD. I love using XD over other tools for speed and the live device preview feature which is especially useful for building mobile devices. </p>
-                                            <p>I often use the live device preview feature during testing. Near the end of the design process, we ran a focus group with around 30 enginers each with their iPad, plugged into my iMac and Adobe XD meaning I could either control their screen or allow them to go at their own pace and raise any issues as they were found.</p>
-                                            <p>Although the group approach yielded interesting insights, most of my testing was conducted one to one and recorded as I find this gets the best results.</p>
-                                            <p>The feedback we gather from the user tests of the prototypes was invaluable in building a great product.</p>
+                                            <p>After the first stage of sketches was done, I jumped into building a medium-fidelity prototype in Adobe XD.</p>
+                                            <p>I preformed user tests on my team at first before speaking with the development team about the technical challenges that we might face.</p>
+                                            <p>I then did user tests with some of our existing customers and potential customers. Some of them loved it so much they purchased the software based on the high-fidelity prototype.</p>
+                                            <p>The feedback we gather from the user tests of the prototypes was invaluable in building a successful product.</p>
                                         </div>
                                     </div>
                                     <hr class="sep-line">
@@ -182,9 +181,8 @@
                                     <div class="no-margin-bottom horizontal clearfix">
                                         <div class="box-content">
                                             <h4>Learnings</h4>
-                                            <p>Schneider Electric staff were heavily invested in the success of this new version, as upsell directly affects their KPI's and commission.</p>
-                                            <p>Their honest and candid feedback highlighted the need for better visibility of the process and the need for better product discovery.</p>
-                                            <p>The tool has been successfully deployed to Schneider Electric UK and has now been adopted by Schneider Electric Ireland with plans to roll out to the rest of the world later this year.</p>
+                                            <p>Though my research I was able to empathize with the people that managed product data. I could feel the challenges they faced every day and I honestly wanted to improve their work life, through the design of a easy to use PIM system.</p>
+
                                         </div>
                                     </div>
                                 </div>
